	  LaunchPad now runs NuttX!  (2013-03-24).
	* configs/lm4f120-launchpad/nsh:  Add an NSH configuration for the
	  LaunchPad (2013-03-24).
	* configs/kwikstik-k40:  Converted configurations to use the
	  konfig-frontends tool (2013-03-25).
	* configs/twr-k60n512:  Converted configurations to use the
	  konfig-frontends tool (2013-03-25).
	* arch/arm/src/lpc17xx/lpc17_lcd.c:  Add an LCD framebuffer drier
	  for the LPC177x/8x family (2103-3-26).
	* arch/arm/src/lpc17xx/lpc17_emc.c and
	  configs/open1788/src/lpc17_sdraminitialize.c:  Began testing the
	  Open1788 SDRAM.  The SDRAM is basically functional, but there are
	  failures with the SDRAM is stressed by the memory test at
	  apps/example/ramtest (SDRAM support and the RAM test can be configured
	  into the base configs/open1788/nsh configuration as described in
	  configs/open1788/READMT.txt (2103-3-27).
	* configs/open1788/nxlines:  Add a configuration to test both the
	  Open1788 LCD and SDRAM which is used as a framebuffer (2013-3-27).
	* arch/arm/src/lpc17xx/lpc17_gdma.c and lpc17_sdcard.c:  Began
	  implementation of the LPC17 DMA and integration into the SDCARD
	  driver (2013-3-29).
	* arch/arm/src/lpc17xx/lpc17_gdma.c: LPC17 DMA is code complete and
	  under test.  Does not yet work (2013-3-30).
	* fs/fat/fs_fat32dirent.c and fs_fat32util.c:  Several fixes to the
	  FAT file system from Ronen Vainish.  These fixes mostly involve the
	  logic to extend directory clusters for the case of long file names
	  but also include a few important general fixes (such as for storing
	  32 bit FAT values) (2013-03-31).
	* arch/arm/src/lpc17xx/lpc17_gdma.c and lpc17_sdcard.c:  SD card DMA
	  is now functional.  Thre may be some issues with DMA from CPU SRAM
	  which is apparently disabled in sleep mode; up_idle() always enters
	  sleep mode (2013-03-31).
	* arch/arm/src/stm32:  Add architecure support for the STM32 F427/F437
	  chips. Contributed by Mike Smith (2014-4-01).