@@ -4484,3 +4484,6 @@
 	  sleep mode (2013-03-31).
 	* arch/arm/src/stm32:  Add architecure support for the STM32 F427/F437
 	  chips. Contributed by Mike Smith (2014-4-01).
+	* configs/zkit-arm-1769/src/up_can.c:  Add support for both CAN1
+	  and CAN2.  Contributed by M.Kannan (2014-4-01).
+
